bitfields/tests/compile_error_cases/errors/bitfield_type_reference_type.stderr
error: The bitfield must have an unsigned integer type as its first argument.
 --> tests/compile_error_cases/errors/bitfield_type_reference_type.rs:3:1
  |
3 | #[bitfield(&u8)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
